--- a/README
+++ b/README
@@ -1,7 +1,17 @@
 This control allows you to copy a string value to the clipboard on mousedown/click. This utilizes the Zeroclipboard library that can be found here: http://code.google.com/p/zeroclipboard/wiki/Instructions
 
-There are 3 things that you need to know in using this control:
+There are 3 things that you need to know to use this control:
 
 1. Support files 
+
+This control needs the corresponding support files from Zeroclipboard in order to work. You can get these support files through this link: http://code.google.com/p/zeroclipboard/downloads/list
+
+2. Setting movie path
+
+This path needs to point to the location of "ZeroClipboard.swf", one of the support files described above.
+
+3. Initialization
+
+You can initialize this control the same thing that you would 
 
 
